Hiding the mouse cursor via the main.css file. This will ensure that the cursor is not visible.

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@
     font-style: normal;
 }
 
+* {
+    cursor: none;
+}
+
 body, html { 
     height: 100%;
     width: 100%;
